--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,9 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-  --bg-color: #242424;
+  color: #213547;
+  background-color: #ffffff;
+  --bg-color: #ffffff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -46,7 +45,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #f9f9f9;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -56,18 +55,4 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 6px solid #646cff;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-    --bg-color: #ffffff;
-  }
-  a:hover {
-    color: #646cff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
